@@ -1,6 +1,7 @@
 2.2.1
 -----
 o Fixes #4315 - UNWIND not binding to identifier
+o Fixes #4341 - START clause ignores associated WHERE
 
 2.2.0
 -----
